[gd_scene load_steps=5 format=2]

[ext_resource path="res://Puzzles/StepPuzzle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/FloorSwitch1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/FloorSwitch2.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.3402, 10 )

[node name="StepPuzzle" type="Node2D"]
script = ExtResource( 1 )

[node name="StepArea" type="Area2D" parent="."]
scale = Vector2( 1.75, 1.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepArea"]
shape = SubResource( 1 )

[node name="SpriteOff" type="Sprite" parent="StepArea"]
position = Vector2( -0.131763, 0.395279 )
scale = Vector2( 0.312377, 0.312377 )
texture = ExtResource( 2 )

[node name="SpriteOn" type="Sprite" parent="StepArea"]
visible = false
position = Vector2( -0.131763, 0.131756 )
scale = Vector2( 0.312377, 0.312377 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="StepArea" to="." method="_on_StepArea_area_entered"]
